fix: prevent layout shift from text reveal in userid el

--- a/v2-blog/src/_includes/css/default.css
+++ b/v2-blog/src/_includes/css/default.css
@@ -123,3 +123,9 @@ menu-mobile:not(:defined) {
   max-width: 65px;
   max-height: 30px;
 }
+
+user-fakeid {
+  display: inline-block;
+  line-height: 1.1;
+  white-space: nowrap;
+}
